--- a/burt.css
+++ b/burt.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Georgia;
+    font-family: Georgia, serif;
     color: #333;
 }
 
@@ -12,7 +12,7 @@ body {
     text-align: center;
     display: block;
     font-size: 100px;
-    font-family: Georgia;
+    font-family: Georgia, serif;
     margin: 0 auto;
     margin-bottom: -30px;
 }
@@ -38,7 +38,7 @@ textarea, .html {
     width: 100%;
     height: 350px;
     font-size: 18px;
-    font-family: Inconsolata, monaco, courier;
+    font-family: Inconsolata, Monaco, Consolas, Courier, monospace;
     margin-bottom: 20px;
 }
 
